src/tests/errors/syntax/003.ura
// parse_errors/009 — member access with no member name after `.`
use "@/header"

struct Point:
    x int
    y int

main():
    p Point
    p.