src/tests/errors/syntax/003.err
[1m[0;31merror: [0munexpected token in expression
   [1m[34m-->[0m src/tests/errors/syntax/003.ura:10:6
   [1m[34m|[0m
[1m[34m10 |[0m     p.
   [1m[34m|[0m      [1;31m^[0m
